# CallMeMaybe

./: .flaskenv  .gitignore  README.md  env.sample  info.txt  lang_prompt_demo.py  main.py  outbound_call.py  pyproject.toml  speller_agent.py  stdout_filterer.py  test.py  transcribe_call.py
tools/: contacts.py  email_tool.py  get_user_inputs.py  search.py  summarize.py  vocode.py
