[tool.poetry]
name = "callmemaybe"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.314"
twilio = "^8.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
