[tool.poetry]
name = "callmemaybe"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
twilio = "^8.9.1"
python-dotenv = "^1.0.0"
flask = "^3.0.0"
flask-sock = "^0.7.0"
simple-websocket = "^1.0.0"
pyngrok = "^7.0.0"
redis = "^5.0.1"
vonage = "^3.10.0"
vocode = "^0.1.111"
elevenlabs = "0.2.20"
google-api-python-client = "^2.103.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
beautifulsoup4 = "^4.12.2"
google-search-results = "^2.4.2"
boto3 = "^1.28.63"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
